Fixed scrollbar, add border rounder completed list

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -18,7 +18,6 @@
 .card,
 .card_container {
     background-color: $gm-primary;
-    overflow-y: scroll;
 
     .game_card {
         width: 150px;
@@ -49,6 +48,7 @@
     }
 
     /*#region Label Icons */
+
     .icon_container {
         position: relative;
     }
@@ -81,34 +81,9 @@
     }
 
     /*#endregion Label Icons */
+
 }
 
-/*#region Scrollbar Style */
-
-// Stile generale della scrollbar
-::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-}
-
-// Impostazioni del colore della scrollbar
-::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    height: 10px;
-}
-
-// Impostazioni del colore della scrollbar al passaggio del mouse
-::-webkit-scrollbar-thumb:hover {
-    background-color: $gm-darker;
-}
-
-// Impostazioni del colore della track della scrollbar
-::-webkit-scrollbar-track {
-    background-color: $gm-primary;
-    border-radius: 10px;
-}
-
-/*#endregion Scrollbar Style */
 
 // Utility
 
